--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "concurrently \"react-scripts start\" \"npm run server\"",
     "server": "node ./server.js",
     "start": "npm run server",
+    "startfront": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
